--- a/package.json
+++ b/package.json
@@ -1,4 +1,3 @@
-
 {
   "name": "my-app",
   "version": "0.1.0",
@@ -7,10 +6,13 @@
     "react-scripts": "0.9.0"
   },
   "dependencies": {
+    "chart.js": "^2.7.1",
+    "react-chartjs-2": "^2.6.4",
     "framework7": "^1.5.3",
     "framework7-react": "^0.9.1",
     "react": "^15.4.2",
-    "react-dom": "^15.4.2"
+    "react-dom": "^15.4.2",
+    "react-scripts": "^0.9.0"
   },
   "scripts": {
     "start": "react-scripts start",
